--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
     "electron": "^2.0.2",
+    "electron-window-state": "^4.1.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-git": "^0.18.1",
