--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "classcat": "^3.1.2",
+    "electron": "^2.0.2",
+    "electron-window-state": "^4.1.1",
     "isomorphic-git": "^0.18.1",
     "octicons": "^7.3.0",
     "pfs": "^2.1.2",
+    "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react": "^16.4.0"
+    "react-hot-loader": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.49",
@@ -24,14 +27,10 @@
     "babel-loader": "^8.0.0-beta",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
-    "electron": "^2.0.2",
-    "electron-window-state": "^4.1.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.17.5",
     "postcss-loader": "^2.1.5",
     "postcss-nesting": "^5.0.0",
-    "react-hot-loader": "^4.3.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.2",
