--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "concurrently -k 'npm run start:renderer' 'npm run start:main'",
     "start:main": "PORT=1337 electron .",
     "start:renderer": "PORT=1337 webpack-dev-server --hot",
-    "build-renderer": "NODE_ENV=production webpack-cli"
+    "build:renderer": "NODE_ENV=production webpack-cli --mode production"
   },
   "dependencies": {
     "@material-ui/core": "^1.2.2",
